--- a/index.html
+++ b/index.html
@@ -188,7 +188,43 @@
           />
         </section>
       </main>
-      <footer class="footer"></footer>
+      <footer class="footer">
+        <div class="footer__columns">
+          <div class="footer__column footer__column_content_copyright">
+            <img
+              src="./images/logo_place_footer.png"
+              alt="Logo de Practicum"
+              class="logo logo_place_footer"
+            />
+            <p class="footer_author">&copy; 2022 Rodolfo Cante</p>
+          </div>
+          <div class="footer__column footer__column_content_about">
+            <p class="footer_column-heading">Acerca de Practicum</p>
+            <nav class="footer_list">
+              <a href="#" class="footer__column-link">Página principal</a>
+              <a href="#" class="footer__column-link">Misión</a>
+              <a href="#" class="footer__column-link">Profesiones</a>
+            </nav>
+          </div>
+          <div class="footer__column footer__column_content_social">
+            <p class="footer_column-heading">Redes sociales</p>
+            <nav class="footer_list">
+              <a href="3" class="footer__column-link"
+                ><img
+                  src="./images/facebook_white.svg"
+                  alt="Icono de Facebook"
+                  class="footer__social-icons"
+                />Facebook</a>
+              <a href="3" class="footer__column-link"
+                ><img
+                  src="./images/instagram_white.svg"
+                  alt="Icono de Facebook"
+                  class="footer__social-icons"
+                />Instagram</a>
+            </nav>
+          </div>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
