--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="pages/index.css">
     <title>Aprender a aprender</title>
   </head>
   <body>
@@ -25,7 +26,7 @@
           alt="El ponderador épico se paró en la cima de una montaña a deliberar sobre los puntos más delicados del sistema educativo moderno, mientras también se preguntaba de dónde vino ese cuadrado azul gigante"
           class="header__main-illustration"
         />
-        <div class="header__square"></div>
+        <div class="rotation header__square"></div>
       </header>
       <main class="content">
         <section class="description">
@@ -62,6 +63,81 @@
               </p>
             </div>
           </div>
+        </section>
+
+        <section class="techniques">
+          <h1 class="section-title">Técnicas de aprendizaje</h1>
+          <h2 class="section-subtitle">Cinco estrategias por Barbara Oakley</h2>
+          <ul class="cards">
+            <li class="cards__item">
+              <img src="./images/cards-attention.png" alt="" class="cards__image">
+              <h3 class="cards__title">Piensa de dos maneras distintas</h3>
+              <p class="cards__description">
+                Un profundo conocimiento se puede lograr alternando libremente entre el pensamiento concentrado y el difuso.
+              </p>
+            </li>
+            <li class="cards__item">
+              <img src="./images/cards-recall.png" alt="" class="cards__image">
+              <h3 class="cards__title">Usa el recuerdo</h3>
+              <p class="cards__description">
+                Mejorar tu capacidad de recordar piezas clave de información ayuda a conectar diferentes áreas del cerebro.
+              </p>
+            </li>
+            <li class="cards__item">
+              <img src="./images/cards-interleaving.png" alt="" class="cards__image">
+              <h3 class="cards__title">Alterna</h3>
+              <p class="cards__description">
+                Cuando aprendes múltiples habilidades al mismo tiempo, estas se refuerzan mutuamente.
+              </p>
+            </li>
+            <li class="cards__item">
+              <img src="./images/cards-question.png" alt="" class="cards__image">
+              <h3 class="cards__title">Haz preguntas</h3>
+              <p class="cards__description">
+                Cuando escuches a tu profesor, piensa en una buena pregunta, en algo que realmente te intrigue.
+              </p>
+            </li>
+            <li class="cards__item">
+              <img src="./images/cards-competence.png" alt="" class="cards__image">
+              <h3 class="cards__title">Crea la ilusión de competencia</h3>
+              <p class="cards__description">
+                Ponte a prueba, apunta tu resultado, cuéntaselo a otras personas y repite el proceso con diferentes configuraciones. Solo entonces podrás estar seguro de haber comprendido algo.
+              </p>
+            </li>
+          </ul>
+        </section>
+
+        <section class="video">
+          <h1 class="section-title">Charlas TED</h1>
+          <h2 class="section-subtitle">Para los amantes de la procrastinación</h2>
+          <div class="video__iframes">
+            <iframe id="ytplayer" type="text/html" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" frameborder="0" allowfullscreen></iframe>
+            <iframe id="ytplayer" type="text/html" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" frameborder="0" allowfullscreen></iframe>
+          </div>
+        </section>
+
+        <section class="oakley">
+          <div class="two-columns">
+            <h3 class="two-columns__brief">
+              La historia de Barbara Oakley.
+            </h3>
+            <div class="two-columns__main-text">
+              <p class="paragraph">
+                Durante la infancia de Barbara, las matemáticas no le surgieron de forma innata. Pensaba que era una persona más orientada a las humanidades, y no precisamente brillante. En vistas a convertirse en lingüista, después de terminar el instituto se alistó en el ejército, donde la mandaron a aprender ruso. Tras varios años de servicio, durante los cuales ascendió al rango de capitán, Barbara dejó el ejército y decidió estudiar ingeniería. Fue en este momento cuando desarrolló su metodología de aprendizaje, porque se vio obligada a reprogramar su cerebro para un tipo de aprendizaje distinto. Resulta que cuando algo no te sale de forma natural, el hecho de tener que trabajar duro para obtener conocimientos, que otras personas pueden captar a la primera, te da un conocimiento más profundo y completo del tema en cuestión.
+              </p>
+            </div>
+          </div>
+        </section>
+
+        <section class="feynman">
+          <h1 class="feynman__title">La técnica Feynman</h1>
+          <h2 class="feynman__subtitle">Aprender sin olvidar</h2>
+          <a href="#" class="feynman__link">Más &rarr;</a>
+          <img src="./images/feynman.png" alt="Una imagen de Richard 
+          Feynman, físico cuántico de fama mundial. Ta Técnica Feynman se 
+          deriva de sus métodos de estudio cuando era estudiante en 
+          Princeton." class="feynman__image"
+          />
         </section>
 
         <section class="digits">
@@ -124,19 +200,22 @@
           </ul>
         </section>
 
-        <section class="feynman">
-          <h1 class="feynman__title">La técnica Feynman</h1>
-          <h2 class="feynman__subtitle">Aprender sin olvidar</h2>
-          <a href="#" class="feynman__link">Más &rarr;</a>
-          <img src="./images/feynman.png" alt="Una imagen de Richard 
-          Feynman, físico cuántico de fama mundial. Ta Técnica Feynman se 
-          deriva de sus métodos de estudio cuando era estudiante en 
-          Princeton." class="feynman__image"
-          />
+        <section class="khan">
+          <div class="khan__container">
+            <h2 class="khan__author">Salman Khan</h2>
+            <h1 class="khan__title">La escuela del mundo</h1>
+            <p class="khan__quote">La pasión e innovación de Sal Khan están transformando el aprendizaje de millones de estudiantes de todo el mundo. "La escuela del mundo" es una lectura obligatoria para todos aquellos que estén comprometidos a mejorar la educación y quieran que estudiantes de todos los rincones del mundo adquieran las habilidades y conocimientos necesarios para tener éxito académico, profesional y en la vida en general.</p>
+            <h3 class="khan__quote-author">George Lucas</h3>
+            <h3 class="khan__quote-author-subline">Director de cine</h3>
+            <div class="khan__book-container">
+              <div class="khan__book-pic"></div>
+              <a href="#" class="khan__buy-link">Comprar libro &rarr;</a>
+            </div>
+          </div>
         </section>
 
         <section class="kaufman">
-          <h1 class="section-title title__theme_dark">Ten principles of rapid skill acquisition </h1>
+          <h1 class="section-title title_theme_dark">Ten principles of rapid skill acquisition </h1>
           <h2 class="section-subtitle subtitle_theme_dark">by Josh Kaufman</h2>
           <ul class="table table_theme_dark">
             <li class="table__cell table__cell_theme_dark">
@@ -184,10 +263,29 @@
             src="./images/kaufman-triangle.svg"
             alt="Un gran triángulo azul, sobre el que
             Josh Kaufman reclama la propiedad"
-            class="kaufman__triangle"
+            class="rotation kaufman__triangle"
           />
         </section>
+
+        <section class="resources">
+          <h1 class="section-title">Recursos útiles</h1>
+          <h2 class="section-subtitle">Más materiales sobre técnicas y trucos de aprendizaje.</h2>
+              <div class="resources__logo-zone">
+              <a href="">
+                <img src="./images/logo/resources-tedED.png" alt="" class="resources__logo">
+              </a>
+              <a href="">
+                <img src="./images/logo/resources-Medium.png" alt="" class="resources__logo">
+              </a>
+              <a href="" >
+                <img src="./images/logo/resources-dezeen.png" alt="" class="resources__logo">
+              <a href="">
+                <img src="./images/logo/resources-goodreads.png" alt="" class="resources__logo">
+              </a>
+            </div>
+        </section>
       </main>
+
       <footer class="footer">
         <div class="footer__columns">
           <div class="footer__column footer__column_content_copyright">
@@ -196,19 +294,19 @@
               alt="Logo de Practicum"
               class="logo logo_place_footer"
             />
-            <p class="footer_author">&copy; 2022 Rodolfo Cante</p>
+            <p class="footer__author">&copy; 2022 Rodolfo Cante</p>
           </div>
           <div class="footer__column footer__column_content_about">
-            <p class="footer_column-heading">Acerca de Practicum</p>
-            <nav class="footer_list">
+            <p class="footer__column-heading">Acerca de Practicum</p>
+            <nav class="footer__list">
               <a href="#" class="footer__column-link">Página principal</a>
               <a href="#" class="footer__column-link">Misión</a>
               <a href="#" class="footer__column-link">Profesiones</a>
             </nav>
           </div>
           <div class="footer__column footer__column_content_social">
-            <p class="footer_column-heading">Redes sociales</p>
-            <nav class="footer_list">
+            <p class="footer__column-heading">Redes sociales</p>
+            <nav class="footer__list">
               <a href="3" class="footer__column-link"
                 ><img
                   src="./images/facebook_white.svg"
