Entrega de proyecto

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles/style.css" />
-    <link rel="stylesheet" href="pages/index.css">
+    <link rel="stylesheet" href="pages/index.css" />
     <title>Aprender a aprender</title>
   </head>
   <body>
@@ -111,8 +111,8 @@
           <h1 class="section-title">Charlas TED</h1>
           <h2 class="section-subtitle">Para los amantes de la procrastinación</h2>
           <div class="video__iframes">
-            <iframe id="ytplayer" type="text/html" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" frameborder="0" allowfullscreen></iframe>
-            <iframe id="ytplayer" type="text/html" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" frameborder="0" allowfullscreen></iframe>
+            <iframe id="ytplayer" type="text/html" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" frameborder="0" allowfullscreen class="video__iframe"></iframe>
+            <iframe id="ytplayer" type="text/html" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" frameborder="0" allowfullscreen class="video__iframe"></iframe>
           </div>
         </section>
 
@@ -271,15 +271,16 @@
           <h1 class="section-title">Recursos útiles</h1>
           <h2 class="section-subtitle">Más materiales sobre técnicas y trucos de aprendizaje.</h2>
               <div class="resources__logo-zone">
-              <a href="">
+              <a href="#">
                 <img src="./images/logo/resources-tedED.png" alt="" class="resources__logo">
               </a>
-              <a href="">
+              <a href="#">
                 <img src="./images/logo/resources-Medium.png" alt="" class="resources__logo">
               </a>
-              <a href="" >
+              <a href="#" >
                 <img src="./images/logo/resources-dezeen.png" alt="" class="resources__logo">
-              <a href="">
+              </a>  
+              <a href="#">
                 <img src="./images/logo/resources-goodreads.png" alt="" class="resources__logo">
               </a>
             </div>
