--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </section>
 
         <section class="techniques">
-          <h1 class="section-title">Técnicas de aprendizaje</h1>
+          <h3 class="section-title">Técnicas de aprendizaje</h3>
           <h2 class="section-subtitle">Cinco estrategias por Barbara Oakley</h2>
           <ul class="cards">
             <li class="cards__item">
@@ -108,11 +108,11 @@
         </section>
 
         <section class="video">
-          <h1 class="section-title">Charlas TED</h1>
+          <h3 class="section-title">Charlas TED</h3>
           <h2 class="section-subtitle">Para los amantes de la procrastinación</h2>
           <div class="video__iframes">
-            <iframe id="ytplayer" type="text/html" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" frameborder="0" allowfullscreen class="video__iframe"></iframe>
-            <iframe id="ytplayer" type="text/html" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" frameborder="0" allowfullscreen class="video__iframe"></iframe>
+            <iframe id="ytplayer" type="text/html" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen class="video__iframe"></iframe>
+            <iframe id="ytplayer2" type="text/html" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen class="video__iframe"></iframe>
           </div>
         </section>
 
@@ -130,7 +130,7 @@
         </section>
 
         <section class="feynman">
-          <h1 class="feynman__title">La técnica Feynman</h1>
+          <h3 class="feynman__title">La técnica Feynman</h3>
           <h2 class="feynman__subtitle">Aprender sin olvidar</h2>
           <a href="#" class="feynman__link">Más &rarr;</a>
           <img src="./images/feynman.png" alt="Una imagen de Richard 
@@ -141,7 +141,7 @@
         </section>
 
         <section class="digits">
-          <h1 class="section-title">Datos y figuras</h1>
+          <h3 class="section-title">Datos y figuras</h3>
           <h2 class="section-subtitle">El aprendizaje y el cerebro</h2>
           <ul class="table">
             <li class="table__cell">
@@ -203,7 +203,7 @@
         <section class="khan">
           <div class="khan__container">
             <h2 class="khan__author">Salman Khan</h2>
-            <h1 class="khan__title">La escuela del mundo</h1>
+            <h3 class="khan__title">La escuela del mundo</h3>
             <p class="khan__quote">La pasión e innovación de Sal Khan están transformando el aprendizaje de millones de estudiantes de todo el mundo. "La escuela del mundo" es una lectura obligatoria para todos aquellos que estén comprometidos a mejorar la educación y quieran que estudiantes de todos los rincones del mundo adquieran las habilidades y conocimientos necesarios para tener éxito académico, profesional y en la vida en general.</p>
             <h3 class="khan__quote-author">George Lucas</h3>
             <h3 class="khan__quote-author-subline">Director de cine</h3>
@@ -215,7 +215,7 @@
         </section>
 
         <section class="kaufman">
-          <h1 class="section-title title_theme_dark">Ten principles of rapid skill acquisition </h1>
+          <h3 class="section-title title_theme_dark">Ten principles of rapid skill acquisition </h3>
           <h2 class="section-subtitle subtitle_theme_dark">by Josh Kaufman</h2>
           <ul class="table table_theme_dark">
             <li class="table__cell table__cell_theme_dark">
@@ -268,7 +268,7 @@
         </section>
 
         <section class="resources">
-          <h1 class="section-title">Recursos útiles</h1>
+          <h3 class="section-title">Recursos útiles</h3>
           <h2 class="section-subtitle">Más materiales sobre técnicas y trucos de aprendizaje.</h2>
               <div class="resources__logo-zone">
               <a href="#">
