--- a/index.html
+++ b/index.html
@@ -70,35 +70,35 @@
           <h2 class="section-subtitle">Cinco estrategias por Barbara Oakley</h2>
           <ul class="cards">
             <li class="cards__item">
-              <img src="./images/cards-attention.png" alt="" class="cards__image">
+              <img src="./images/cards-attention.png" alt="Piensa de dos maneras distintas" class="cards__image">
               <h3 class="cards__title">Piensa de dos maneras distintas</h3>
               <p class="cards__description">
                 Un profundo conocimiento se puede lograr alternando libremente entre el pensamiento concentrado y el difuso.
               </p>
             </li>
             <li class="cards__item">
-              <img src="./images/cards-recall.png" alt="" class="cards__image">
+              <img src="./images/cards-recall.png" alt="Usa el recuerdo" class="cards__image">
               <h3 class="cards__title">Usa el recuerdo</h3>
               <p class="cards__description">
                 Mejorar tu capacidad de recordar piezas clave de información ayuda a conectar diferentes áreas del cerebro.
               </p>
             </li>
             <li class="cards__item">
-              <img src="./images/cards-interleaving.png" alt="" class="cards__image">
+              <img src="./images/cards-interleaving.png" alt="Alterna" class="cards__image">
               <h3 class="cards__title">Alterna</h3>
               <p class="cards__description">
                 Cuando aprendes múltiples habilidades al mismo tiempo, estas se refuerzan mutuamente.
               </p>
             </li>
             <li class="cards__item">
-              <img src="./images/cards-question.png" alt="" class="cards__image">
+              <img src="./images/cards-question.png" alt="Haz preguntas" class="cards__image">
               <h3 class="cards__title">Haz preguntas</h3>
               <p class="cards__description">
                 Cuando escuches a tu profesor, piensa en una buena pregunta, en algo que realmente te intrigue.
               </p>
             </li>
             <li class="cards__item">
-              <img src="./images/cards-competence.png" alt="" class="cards__image">
+              <img src="./images/cards-competence.png" alt="Crea la ilusión de competencia" class="cards__image">
               <h3 class="cards__title">Crea la ilusión de competencia</h3>
               <p class="cards__description">
                 Ponte a prueba, apunta tu resultado, cuéntaselo a otras personas y repite el proceso con diferentes configuraciones. Solo entonces podrás estar seguro de haber comprendido algo.
@@ -272,16 +272,16 @@
           <h2 class="section-subtitle">Más materiales sobre técnicas y trucos de aprendizaje.</h2>
               <div class="resources__logo-zone">
               <a href="#">
-                <img src="./images/logo/resources-tedED.png" alt="" class="resources__logo">
+                <img src="./images/logo/resources-tedED.png" alt="tedED" class="resources__logo">
               </a>
               <a href="#">
-                <img src="./images/logo/resources-Medium.png" alt="" class="resources__logo">
+                <img src="./images/logo/resources-Medium.png" alt="Medium" class="resources__logo">
               </a>
               <a href="#" >
-                <img src="./images/logo/resources-dezeen.png" alt="" class="resources__logo">
+                <img src="./images/logo/resources-dezeen.png" alt="dezeen" class="resources__logo">
               </a>  
               <a href="#">
-                <img src="./images/logo/resources-goodreads.png" alt="" class="resources__logo">
+                <img src="./images/logo/resources-goodreads.png" alt="goodreads" class="resources__logo">
               </a>
             </div>
         </section>
