--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
           <h3 class="section-title">Charlas TED</h3>
           <h2 class="section-subtitle">Para los amantes de la procrastinación</h2>
           <div class="video__iframes">
-            <iframe id="ytplayer" type="text/html" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen class="video__iframe"></iframe>
-            <iframe id="ytplayer2" type="text/html" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen class="video__iframe"></iframe>
+            <iframe id="ytplayer" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen class="video__iframe"></iframe>
+            <iframe id="ytplayer2" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen class="video__iframe"></iframe>
           </div>
         </section>
 
