--- a/index.html
+++ b/index.html
@@ -215,8 +215,8 @@
         </section>
 
         <section class="kaufman">
-          <h3 class="section-title title_theme_dark">Ten principles of rapid skill acquisition </h3>
-          <h2 class="section-subtitle subtitle_theme_dark">by Josh Kaufman</h2>
+          <h3 class="section-title section-title_theme_dark">Ten principles of rapid skill acquisition </h3>
+          <h2 class="section-subtitle section-subtitle_theme_dark">by Josh Kaufman</h2>
           <ul class="table table_theme_dark">
             <li class="table__cell table__cell_theme_dark">
               <h3 class="table__heading table__heading_theme_dark">1</h3>
