--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
             <h3 class="khan__quote-author">George Lucas</h3>
             <h3 class="khan__quote-author-subline">Director de cine</h3>
             <div class="khan__book-container">
-              <div class="khan__book-pic"></div>
+              <img src="./images/khan-book-2.png" alt="book" class="khan__book-pic">
               <a href="#" class="khan__buy-link">Comprar libro &rarr;</a>
             </div>
           </div>
